Constraintprog/minizinc-1.6/tests/parsing/flatzinc/f-type-insts-bad.fzn_yacc.err_exp
f-type-insts-bad.fzn:4: syntax error before '('
f-type-insts-bad.fzn:7: syntax error before 'string'
f-type-insts-bad.fzn:10: syntax error before 'list'
f-type-insts-bad.fzn:13: syntax error before 'tuple'
f-type-insts-bad.fzn:16: syntax error before 'record'
f-type-insts-bad.fzn:19: syntax error before '$'
f-type-insts-bad.fzn:22: syntax error before ','
f-type-insts-bad.fzn:25: syntax error before '('
f-type-insts-bad.fzn:28: syntax error before 'par'
f-type-insts-bad.fzn:32: syntax error before '1'
f-type-insts-bad.fzn:33: syntax error before '..'
f-type-insts-bad.fzn:34: syntax error before '3'
f-type-insts-bad.fzn:35: syntax error before ']'
f-type-insts-bad.fzn:36: syntax error before 'of'
f-type-insts-bad.fzn:37: syntax error before 'var'
f-type-insts-bad.fzn:38: syntax error before 'par'
f-type-insts-bad.fzn:39: syntax error before '1.0'
f-type-insts-bad.fzn:42: syntax error before 'float'
f-type-insts-bad.fzn:43: syntax error before 'bool'
f-type-insts-bad.fzn:44: syntax error before 'var'
f-type-insts-bad.fzn:45: syntax error before 'set'
f-type-insts-bad.fzn:46: syntax error before 'array'
f-type-insts-bad.fzn:49: syntax error before 'set'
f-type-insts-bad.fzn:50: syntax error before 'array'
f-type-insts-bad.fzn:51: syntax error before 'array'
f-type-insts-bad.fzn:52: syntax error before 'int'
f-type-insts-bad.fzn:54: syntax error before ';'
f-type-insts-bad.fzn:55: syntax error before 's6'
f-type-insts-bad.fzn:58: syntax error before 's7'
f-type-insts-bad.fzn:60: syntax error before '3.0'
f-type-insts-bad.fzn:61: syntax error before '3'
